--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -1,25 +1,22 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Run tests
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         julia-version: ['1.0', '1.4']
         julia-arch: [x64, x86]
         os: [ubuntu-latest, windows-latest, macOS-latest]
+        exclude:
+          - os: windows-latest
+            julia-version: '1.0'
 
     steps:
       - uses: actions/checkout@v2
