--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.0', '1.4', '1.5', 'nightly']
+        julia-version: ['1.5', '1.6', 'nightly']
         julia-arch: [x64, x86]
         os: [ubuntu-latest, windows-latest, macOS-latest]
         exclude:
